# gemma-brief

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
media/: devto_article.md
podcastbrief/: cli.py
podcastbrief/adapters/: _yt_dlp.py  apple_music_source.py  artwork_rss.py  fred_enricher.py  fs_notes.py  gemma_debate_retriever.py  gotenberg_renderer.py  itunes_rss_feed.py  ollama_gemma.py  pydub_clip_extractor.py  rss_news_enricher.py  rss_source.py  spotify_recommender.py  spotify_source.py  telegram_notifier.py  weasyprint_renderer.py  whisper_http.py  wikipedia_enricher.py  yahoo_enricher.py  youtube_feed.py  youtube_recommender.py  youtube_source.py
podcastbrief/bot/: chart_tool.py  commands.py  debate_handler.py  explain_handler.py  index.py  rag.py  upload_router.py  voice.py
podcastbrief/briefing/: debate_analyzer.py  extractor.py  grounder.py  interrogator.py  schemas.py
podcastbrief/briefing/templates/: morning_brief.css  morning_brief.html
podcastbrief/core/: config.py  enrichment.py  models.py  pipeline.py  vault.py
podcastbrief/jobs/: add_source.py  auth_spotify.py  bot.py  cleanup.py  daily.py  maintenance.py  setup.py
podcastbrief/ports/: clip_extractor.py  debate_retriever.py  enricher.py  feed.py  images.py  llm.py  notes.py  notifier.py  recommender.py  renderer.py  source.py  transcriber.py
scripts/: benchmark.py  com.podcastbrief.serve.plist  install-launchd.sh  install-systemd.sh  install.sh  test_bot.py
