[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma-brief"
version = "1.0.0"
description = "Local AI briefing engine for YouTube, news & debates — Gemma 4 on-device"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-telegram-bot>=21.0",
    "ollama>=0.4",
    "jinja2>=3.1",
    "Pillow>=10.0",
    "rank-bm25>=0.2.2",
    "apscheduler>=3.10",
    "python-frontmatter>=1.1",
    "tenacity>=8.2",
    # Enrichment adapters
    "yfinance>=0.2.40",
    "matplotlib>=3.9",
    # Audio clip extraction + stitching (/debate command). Requires ffmpeg on PATH.
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]
weasyprint = ["weasyprint>=62.0"]
# Bundled ffmpeg+ffprobe binaries for /debate clip stitching when the user
# doesn't have a system ffmpeg install. PydubClipExtractor activates them
# automatically at import time if this package is present.
ffmpeg = ["static-ffmpeg>=3.0"]

[project.scripts]
gemma-brief = "podcastbrief.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["podcastbrief*"]

[tool.setuptools.package-data]
"podcastbrief.briefing" = ["templates/*.html", "templates/*.css", "templates/assets/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
